--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
         <tomcat.version>8.5.23</tomcat.version>
     </properties>
     <dependencies>
-    <dependency>
+        <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>3.8.1</version>
@@ -60,6 +60,16 @@
             <version>4.3.13.RELEASE</version>
             <type>jar</type>
         </dependency>
+        <dependency>
+            <groupId>org.glassfish.jersey.containers</groupId>
+            <artifactId>jersey-container-servlet-core</artifactId>
+            <version>2.12</version>
+        </dependency>
+        <dependency>
+            <groupId>org.glassfish.jersey.containers</groupId>
+            <artifactId>jersey-container-grizzly2-http</artifactId>
+            <version>2.12</version>
+        </dependency>
     </dependencies>
     <build>
         <finalName>embeddedTomcatSample</finalName>
@@ -83,9 +93,20 @@
                         <goals>
                             <goal>assemble</goal>
                         </goals>
+                        <configuration>
+                            <artifactItems>
+                                <artifactItem>
+                                    <groupId>com.github.jsimone</groupId>
+                                    <artifactId>webapp-runner</artifactId>
+                                    <version>7.0.22.3</version>
+                                    <destFileName>webapp-runner.jar</destFileName>
+                                </artifactItem>
+                            </artifactItems>
+                        </configuration>
                     </execution>
                 </executions>
             </plugin>
+            
         </plugins>
     </build>
 </project>
