--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <artifactId>embeddedTomcatSample</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
-    <name>embeddedTomcatSample Maven Webapp</name>
+    <name>WePlayChili Maven Webapp</name>
     <url>http://maven.apache.org</url>
     <properties>
         <tomcat.version>8.5.23</tomcat.version>
